presentbounce: tweaking target box2d fixtures and css alignment

--- a/scenes/presentbounce/sass/_debug.scss
+++ b/scenes/presentbounce/sass/_debug.scss
@@ -3,7 +3,7 @@
     outline: 2px dashed #eee;
     user-select: none;
     position: relative;
-    z-index: 2;
+    z-index: 30;
     pointer-events: none;
   }
 
